add: users and products swagger API endpoints documented
