# internal/model/product.go
@@ -12,3 +12,8 @@ type Product struct {
 	CreatedAt time.Time       `json:"created_at"`
 	UpdatedAt time.Time       `json:"updated_at"`
 }
+
+type ProductResponse struct {
+	Message string  `json:"message"`
+	Data    Product `json:"data"`
+}
